fixed error message font to make it more visible

--- a/FrontEnd/src/components/loginPage/loginPage.css
+++ b/FrontEnd/src/components/loginPage/loginPage.css
@@ -52,9 +52,10 @@
     transform: translateY(-1px);
 }
 .login-error-msg {
-    color: #fecaca;
+    color: #e21414;
     margin-top: 10px;
-    font-size: 16px;
+    font-size: 24px;
+    font-weight: 600;
     text-align: center;
     font-family: 'Montserrat', sans-serif;
 }
